Add loading scenes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <title>Set Theory Game</title>
     <script type="text/javascript" src="js/phaser/phaser.js"></script>
+    <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
+    <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>
     <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>
+    <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
+    <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
+    <script type="text/javascript" src="js/LevelGeneration/model/LevelFormulaGenerator.js"></script>
+    <script type="text/javascript" src="js/LevelGeneration/model/LevelGenerationSizer.js"></script>
+    <script type="text/javascript" src="js/LevelGeneration/controller/LevelGenerationScene.js"></script>
+    <script type="text/javascript" src="js/LoadingResources/model/LoadingResourcesSizer.js"></script>
+    <script type="text/javascript" src="js/LoadingResources/controller/LoadingResourcesScene.js"></script>
+    <script type="text/javascript" src="js/Game/model/GameSizer.js"></script>
+    <script type="text/javascript" src="js/Game/controller/GameScene.js"></script>
+    <script type="text/javascript" src="js/GamePause/model/GamePauseSizer.js"></script>
+    <script type="text/javascript" src="js/GamePause/controller/GamePauseScene.js"></script>
+    <script type="text/javascript" src="js/Utilities/Scaler.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
 <body>
@@ -13,6 +27,7 @@
         overflow: hidden;
         padding: 0;
         margin: 0;
+        background-color: #ffcc66;
     }
 </style>
 </body>
