--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <title>Set Theory Game</title>
     <script type="text/javascript" src="js/phaser/phaser.js"></script>
+    <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
+    <script type="text/javascript" src="js/twf/TWF.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
     <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>
     <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>
     <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
     <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
+    <script type="text/javascript" src="js/LevelGeneration/model/Shuffler.js"></script>
     <script type="text/javascript" src="js/LevelGeneration/model/LevelFormulaGenerator.js"></script>
     <script type="text/javascript" src="js/LevelGeneration/model/LevelGenerationSizer.js"></script>
     <script type="text/javascript" src="js/LevelGeneration/controller/LevelGenerationScene.js"></script>
@@ -18,6 +21,8 @@
     <script type="text/javascript" src="js/Game/controller/GameScene.js"></script>
     <script type="text/javascript" src="js/GamePause/model/GamePauseSizer.js"></script>
     <script type="text/javascript" src="js/GamePause/controller/GamePauseScene.js"></script>
+    <script type="text/javascript" src="js/GameComplete/model/GameCompleteSizer.js"></script>
+    <script type="text/javascript" src="js/GameComplete/controller/GameCompleteScene.js"></script>
     <script type="text/javascript" src="js/Utilities/Scaler.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
