--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Set Theory Game</title>
     <script type="text/javascript" src="/js/phaser/phaser.js"></script>
     <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
-    <script type="text/javascript" src="js/twf/TWF.js"></script>
+    <script type="text/javascript" src="js/twf/twf_js.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
     <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>
     <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>
