delete first menu

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
     <script type="text/javascript" src="js/twf/twf_js.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
-    <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>
-    <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>
+<!--    <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>-->
+<!--    <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>-->
     <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
     <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
     <script type="text/javascript" src="js/LevelGeneration/model/Shuffler.js"></script>
