change html page title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Set Theory Game</title>
+    <title>Shoot the wrongs</title>
     <script type="text/javascript" src="/js/phaser/phaser.js"></script>
     <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
     <script type="text/javascript" src="js/twf/twf_js.js"></script>
