--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--base href="https://www.mathhelper.online/scannon/boolean/"-->
     <meta charset="UTF-8">
     <title>Scannon - Logic</title>
     <!-- Yandex.Metrika counter -->
@@ -18,7 +19,7 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/88802966" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
-    <script type="text/javascript" src="/js/phaser/phaser.js"></script>
+    <script type="text/javascript" src="js/phaser/phaser.js"></script>
     <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
     <script type="text/javascript" src="js/twf/twf_js.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
