--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--base href="https://www.mathhelper.online/scannon/boolean/"-->
     <meta charset="UTF-8">
     <title>Scannon - Logic</title>
-    <link rel="icon" href="resources/cannon-icon.jpg">
+    <link rel="icon" href="resources/cannon-icon.png">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
