--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!--base href="https://www.mathhelper.online/scannon/boolean/"-->
+    <base href="https://www.mathhelper.online/scannon/boolean/">
+    <!-- rsync -rzavP -e "ssh -i /Users/vkatsman/.ssh/id_rsa_mathhelper" ~/IdeaProjects/TWF-scaled-game/*  root_user@51.250.104.112:~/projec_src/TWF-scaled-game -->
     <meta charset="UTF-8">
     <title>Scannon - Logic</title>
     <link rel="icon" href="resources/cannon-icon.png">
