settings moved to resources

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <!--base href="https://www.mathhelper.online/scannon/boolean/"-->
+    <!-- rsync -rzavP -e "ssh -i /Users/vkatsman/.ssh/id_rsa_mathhelper" ~/IdeaProjects/TWF-scaled-game/*  root_user@51.250.104.112:~/projec_src/TWF-scaled-game -->
     <meta charset="UTF-8">
     <title>Scannon - Logic</title>
     <link rel="icon" href="resources/cannon-icon.png">
@@ -24,8 +25,6 @@
     <script type="text/javascript" src="js/kotlin/kotlin.js"></script>
     <script type="text/javascript" src="js/twf/twf_js.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
-<!--    <script type="text/javascript" src="js/MainMenu/model/MainMenuSizer.js"></script>-->
-<!--    <script type="text/javascript" src="js/MainMenu/controller/MainMenuScene.js"></script>-->
     <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
     <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
     <script type="text/javascript" src="js/LevelGeneration/model/Shuffler.js"></script>
