--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://www.mathhelper.online/scannon/short_multiplication/">
+<!--    <base href="https://www.mathhelper.online/scannon/short_multiplication/">-->
     <!-- rsync -rzavP -e "ssh -i /Users/vkatsman/.ssh/id_rsa_mathhelper" ~/IdeaProjects/TWF-scaled-game/*  root_user@51.250.104.112:~/projec_src/TWF-scaled-game -->
     <!-- sudo cp ~/projec_src/TWF-scaled-game/* /var/www/mathhelper.online/scannon/... -r -->
     <meta charset="UTF-8">
