--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!-- rsync -rzavP -e "ssh -i /Users/vkatsman/.ssh/id_rsa_mathhelper" ~/IdeaProjects/TWF-scaled-game/*  root_user@51.250.104.112:~/projec_src/TWF-scaled-game -->
     <!-- sudo cp ~/projec_src/TWF-scaled-game/* /var/www/mathhelper.online/scannon/... -r -->
     <meta charset="UTF-8">
-    <title>Scannon - Short Multiplication</title>
+    <!--title>Scannon - Logic</title-->
+    <!--title>Scannon - Short Multiplication</title-->
+    <title>Scannon - Differentiation</title>
     <link rel="icon" href="resources/cannon-icon.png">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
