--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--title>Scannon - Logic</title-->
     <!--title>Scannon - Short Multiplication</title-->
     <title>Scannon - Differentiation</title>
+    <!--title>Scannon - Trigonometry</title-->
     <link rel="icon" href="resources/cannon-icon.png">
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
