--- a/index.html
+++ b/index.html
@@ -21,7 +21,19 @@
     </script>
     <noscript><div><img src="https://mc.yandex.ru/watch/88802966" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.css" integrity="sha384-Xi8rHCmBmhbuyyhbI88391ZKP2dmfnOl4rT9ZfRI7mLTdk1wblIUnrIq35nqwEvC" crossorigin="anonymous">
+    <!-- The loading of KaTeX is deferred to speed up page rendering -->
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/katex.min.js" integrity="sha384-X/XCfMm41VSsqRNQgDerQczD69XqmjOOOwYQvr/uuC+j4OPoNhVgjdGFwhvN02Ja" crossorigin="anonymous"></script>
+    <!-- To automatically render math in text elements, include the auto-render extension: -->
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.0/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"
+            onload="renderMathInElement(document.body);"></script>
+
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.css" integrity="sha384-IKOookmJ6jaAbJnGdgrLG5MDmzxJmjkIm6XCFqxnhzuMbfkEhGQalwVq2sYnGyZM" crossorigin="anonymous">-->
+<!--    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.js" integrity="sha384-kSBEBJfG5+zZAKID5uvi6avDXnnOGLnbknFv6VMnVBrknlFw67TwFsY9PaD33zBI" crossorigin="anonymous"></script>-->
+
     <script type="text/javascript" src="js/phaser/phaser.js"></script>
+    <script type="text/javascript" src="js/Utilities/dom-to-image.min.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
     <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
     <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
@@ -43,10 +55,13 @@
 <body>
 <style>
     * {
-        overflow: hidden;
+        /*overflow: hidden;*/
         padding: 0;
         margin: 0;
-        background-color: #ffcc66;
+        /*background-color: #ffcc66;*/
+    }
+    body {
+        background-color: #fc6;
     }
 </style>
 </body>
