add latex variant to set expressions

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <!--    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.2/dist/katex.js" integrity="sha384-kSBEBJfG5+zZAKID5uvi6avDXnnOGLnbknFv6VMnVBrknlFw67TwFsY9PaD33zBI" crossorigin="anonymous"></script>-->
 
     <script type="text/javascript" src="js/phaser/phaser.js"></script>
+    <script type="text/javascript" src="js/Utilities/dom-to-image.min.js"></script>
     <script type="text/javascript" src="js/GameConfiguration/GS.js"></script>
     <script type="text/javascript" src="js/LevelMenu/model/LevelMenuSizer.js"></script>
     <script type="text/javascript" src="js/LevelMenu/controller/LevelMenuScene.js"></script>
